--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="./style.css">
-        <title>My Personal Website</title>
+        <title>Blake Creasser</title>
     </head>
     <body>
         <h1>Hello World!</h1>
