add header content to html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
         <title>Blake Creasser</title>
     </head>
     <body>
+        <div class="header">
+            <div class="links">
+                <div>
+                    <a href="https://github.com/Creasser">GitHub</a>
+                </div>
+                <div>
+                    <a href="https://www.linkedin.com/in/blake-creasser-701777242/">LinkedIn</a>
+                </div>
+                <div>Dark Mode</div>
+                <div>Light Mode</div>
+            </div>
+            <div class="pageTitle">Blake Creasser</div>
+        </div>
         <h1>Hello World!</h1>
         <script src="./scripts.js"></script>
     </body>
