finish styling header, removed link decoration, make btn look like links

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
                 <div>
                     <a href="https://www.linkedin.com/in/blake-creasser-701777242/">LinkedIn</a>
                 </div>
-                <div>Dark Mode</div>
-                <div>Light Mode</div>
+                <div>
+                    <button id="dark">Dark Mode</button>
+                </div>
+                <div>
+                    <button id="light">Light Mode</button>
+                </div>
             </div>
             <div class="pageTitle">Blake Creasser</div>
         </div>
