add about me section and style it on page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             </div>
             <div class="pageTitle">Blake Creasser</div>
         </div>
-        <h1>Hello World!</h1>
+        <div class="aboutMe">
+            
+        </div>
         <script src="./scripts.js"></script>
     </body>
 </html>
