finish styling about me section

--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
             <div class="pageTitle">Blake Creasser</div>
         </div>
         <div class="aboutMe">
-            
-        </div>
+            <div class="aboutTitle">About Me</div>
+               <div class="containerOne">
+                    <div class="aboutContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
+                    <div class="imgCont">
+                        <img style="width:auto ;height:250px" src="./imgs/Ski pic.jpg">
+                    </div>
+                </div>
+            </div>
         <script src="./scripts.js"></script>
     </body>
 </html>
