added lang section and formatted it

--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@
                     </div>
                 </div>
             </div>
+        
+        <div class="containerTwo">
+            <div class="lang">
+                <div id="header">Languages (Still Learning!)</div>
+                <div id="list">
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>React</li>
+                        <li>Ruby</li>
+                        <li>Rails</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="projects"></div>
+        </div>
         <script src="./scripts.js"></script>
     </body>
 </html>
