add projects section and formatted it

--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@
                     </ul>
                 </div>
             </div>
-            <div class="projects"></div>
+            <div class="projects">
+                <div id="header">Past Projects</div>
+                <div id="projectLinks">
+                    <ul>
+                        <li><a href="https://creasser.github.io/landing-page/">Blog Webpage Mockup!</a></li>
+                        <li><a href="https://creasser.github.io/rock-paper-scissors/">Rock Paper Scissors Game!</a></li>
+                        <li><a href="https://creasser.github.io/etch-e-sketch/">Etch-E-Sketch!</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <script src="./scripts.js"></script>
     </body>
