add footer with copyright

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                 </div>
             </div>
         </div>
+        <div class="footer">
+            <div>&copy;Creasser 2022</div>
+        </div>
         <script src="./scripts.js"></script>
     </body>
 </html>
