add basic dark and light mode functions

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <div class="header">
             <div class="links">
                 <div>
-                    <a href="https://github.com/Creasser">GitHub</a>
+                    <a class="link" href="https://github.com/Creasser">GitHub</a>
                 </div>
                 <div>
-                    <a href="https://www.linkedin.com/in/blake-creasser-701777242/">LinkedIn</a>
+                    <a class="link" href="https://www.linkedin.com/in/blake-creasser-701777242/">LinkedIn</a>
                 </div>
                 <div>
                     <button id="dark">Dark Mode</button>
@@ -51,9 +51,9 @@
                 <div id="header">Past Projects</div>
                 <div id="projectLinks">
                     <ul>
-                        <li><a href="https://creasser.github.io/landing-page/">Blog Webpage Mockup!</a></li>
-                        <li><a href="https://creasser.github.io/rock-paper-scissors/">Rock Paper Scissors Game!</a></li>
-                        <li><a href="https://creasser.github.io/etch-e-sketch/">Etch-E-Sketch!</a></li>
+                        <li><a class="link" href="https://creasser.github.io/landing-page/">Blog Webpage Mockup!</a></li>
+                        <li><a class="link" href="https://creasser.github.io/rock-paper-scissors/">Rock Paper Scissors Game!</a></li>
+                        <li><a class="link" href="https://creasser.github.io/etch-e-sketch/">Etch-E-Sketch!</a></li>
                     </ul>
                 </div>
             </div>
