--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="aboutMe">
             <div class="aboutTitle">About Me</div>
                <div class="containerOne">
-                    <div class="aboutContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
+                    <div class="aboutContent">I graduated from Texas A&M University in May of 2022 with a degree in Wildlife and Fisheries Sciences. I started coding in June that same year. My plans after finishing Flatiron School are to land a software engineering position at a tech company! Some of my hobbies are snowboarding and watching documentaries. </div>
                     <div class="imgCont">
                         <img style="width:auto ;height:250px" src="./imgs/Ski pic.jpg">
                     </div>
